--- a/Tempo2/TypeDetailViewTypeInfo.xaml
+++ b/Tempo2/TypeDetailViewTypeInfo.xaml
@@ -48,6 +48,7 @@
                             <DataTemplate x:DataType="local:TypeViewModel">
                                 <TextBlock local:CsSyntaxGenerator.TypeName="{x:Bind Mode=OneWay}" 
                                            TextWrapping="Wrap"
+                                           HorizontalAlignment="Left"
                                            IsTextSelectionEnabled="True" />
                             </DataTemplate>
                         </ItemsControl.ItemTemplate>
@@ -62,6 +63,7 @@
                             <DataTemplate x:DataType="local:TypeViewModel">
                                 <TextBlock local:CsSyntaxGenerator.TypeName="{x:Bind Mode=OneWay}" 
                                            TextWrapping="Wrap" 
+                                           HorizontalAlignment="Left"
                                            IsTextSelectionEnabled="True" />
                             </DataTemplate>
                         </ItemsControl.ItemTemplate>
@@ -75,6 +77,7 @@
                             <DataTemplate x:DataType="local:TypeViewModel">
                                 <TextBlock local:CsSyntaxGenerator.TypeName="{x:Bind Mode=OneWay}" 
                                            IsTextSelectionEnabled="True"
+                                           HorizontalAlignment="Left"
                                            TextWrapping="Wrap"/>
                             </DataTemplate>
                         </ItemsControl.ItemTemplate>
@@ -92,6 +95,7 @@
                             <DataTemplate x:DataType="local:TypeViewModel">
                                 <TextBlock local:CsSyntaxGenerator.TypeName="{x:Bind Mode=OneWay}" 
                                            IsTextSelectionEnabled="True"
+                                           HorizontalAlignment="Left"
                                            TextWrapping="Wrap" />
                             </DataTemplate>
                         </ItemsControl.ItemTemplate>
@@ -105,6 +109,7 @@
                             <DataTemplate x:DataType="local:MemberOrTypeViewModelBase">
                                 <TextBlock local:CsSyntaxGenerator.MemberName="{x:Bind Mode=OneWay}" 
                                            IsTextSelectionEnabled="True"
+                                           HorizontalAlignment="Left"
                                            TextWrapping="Wrap" />
                             </DataTemplate>
                         </ItemsControl.ItemTemplate>
