--- a/Tempo2/HomePage.xaml
+++ b/Tempo2/HomePage.xaml
@@ -125,7 +125,7 @@
 
                                 <StackPanel Margin="0,10,0,0" Orientation="Horizontal">
                                     <Button Click="OpenCustomClick">Open</Button>
-                                    <Button Content="Close" 
+                                    <Button Content="Close all" 
                                             Click="CloseCustomClick"
                                             IsEnabled="{x:Bind local:Utils.IsntEmpty(local:DesktopManager2.CustomApiScopeFileNames.Value), Mode=OneWay}" />
                                 </StackPanel>
@@ -135,14 +135,25 @@
                                                     local:CollapseIfEmpty.IsEnabledFor="{x:Bind _customFilenamesText}">
                                     <TextBlock Text="Current:" TextWrapping="Wrap"/>
                                     <ItemsControl x:Name="_customFilenamesText"
-                                                  Margin="5,0,0,0"
+                                                  Margin="10,0,0,0"
                                                   ItemsSource="{x:Bind SplitFilenames(local:DesktopManager2.CustomApiScopeFileNames.Value), Mode=OneWay}">
                                         <ItemsControl.ItemTemplate>
                                             <DataTemplate x:DataType="local:SplitFilename">
-                                                <StackPanel>
-                                                    <TextBlock Text="{x:Bind FilePart}" />
-                                                    <TextBlock Text="{x:Bind PathPart}" Margin="5,0,0,0"/>
-                                                </StackPanel>
+                                                <Grid ColumnDefinitions="Auto,*" ColumnSpacing="10">
+                                                    <!-- Delete button (hyperlink, because an actual button is too big -->
+                                                    <TextBlock>
+                                                        <Hyperlink ToolTipService.ToolTip="Close this file"
+                                                                   Click="RemoveCustomFile_Click"
+                                                                   local:HomePage.TextElementTag="{x:Bind}"
+                                                                   >[X]</Hyperlink>
+                                                    </TextBlock>
+
+                                                    <!-- Filename and path -->
+                                                    <StackPanel Grid.Column="1">
+                                                        <TextBlock Text="{x:Bind FilePart}" />
+                                                        <TextBlock Text="{x:Bind PathPart}" />
+                                                    </StackPanel>
+                                                </Grid>
                                             </DataTemplate>
                                         </ItemsControl.ItemTemplate>
                                     </ItemsControl>
