Fix the heading bar to highlight the namespace

--- a/Tempo2/HeadingBar.xaml
+++ b/Tempo2/HeadingBar.xaml
@@ -39,6 +39,7 @@
                            TextWrapping="Wrap"
                            IsTextSelectionEnabled="True"
                            Style="{x:Bind SubtitleStyle, Mode=Oneway}" 
+                           local:SearchHighlighter.IsEnabled="True"
                            >
                 </TextBlock>
             </StackPanel>
