--- a/Tempo2/HomePage.xaml
+++ b/Tempo2/HomePage.xaml
@@ -13,7 +13,7 @@
 
             <Grid ColumnDefinitions="Auto,*"
                   VerticalAlignment="Center" HorizontalAlignment="Center"
-                  Background="White"
+                  Background="{ThemeResource ApplicationPageBackgroundThemeBrush}"
                   Padding="40"
                   CornerRadius="5"
                   ColumnSpacing="50" RowSpacing="40">
