--- a/Tempo2/TypeDetailView.xaml
+++ b/Tempo2/TypeDetailView.xaml
@@ -8,7 +8,8 @@
     xmlns:controls="using:CommunityToolkit.WinUI.UI.Controls"
     mc:Ignorable="d">
 
-    <Grid Background="White" PointerPressed="Grid_PointerPressed" >
+    <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}" 
+          PointerPressed="Grid_PointerPressed" >
 
         <Grid.RowDefinitions>
             <!-- Command bar and heading -->
