--- a/Tempo2/HelpPage.xaml
+++ b/Tempo2/HelpPage.xaml
@@ -7,7 +7,8 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" xmlns:controls="using:CommunityToolkit.WinUI.UI.Controls"
     mc:Ignorable="d"
-    Background="Transparent">
+    Background="Transparent"
+    RequestedTheme="{x:Bind local:App.Instance.ElementTheme, Mode=OneWay}">
 
     <ScrollViewer Padding="20" Margin="50" MaxWidth="800" 
                   Background="{ThemeResource ApplicationPageBackgroundThemeBrush}"
