--- a/Tempo2/HomePage.xaml
+++ b/Tempo2/HomePage.xaml
@@ -7,7 +7,13 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d">
 
-    <ScrollViewer  >
+    <ScrollViewer>
+        <ScrollViewer.Resources>
+            
+            <!-- Hack to do a theme lookup since there's no API for it -->
+            <Rectangle x:Name="_accentColorBrush" x:FieldModifier="public"
+                       Fill="{ThemeResource SystemAccentColor}"/>
+        </ScrollViewer.Resources>
         <Grid x:Name="_root" Background="Transparent" Padding="60" 
           PointerPressed="TeachingTipDemo_PointerPressed">
 
@@ -34,6 +40,9 @@
                     <RowDefinition Height="Auto"/>
 
                     <!-- Baseline -->
+                    <RowDefinition Height="Auto"/>
+
+                    <!-- Theme -->
                     <RowDefinition Height="Auto"/>
                 </Grid.RowDefinitions>
 
@@ -274,6 +283,32 @@
                         </StackPanel>
                     </StackPanel>
                 </Grid>
+
+
+
+                <!-- Row 6: theme -->
+                <TextBlock Grid.Row="6" Grid.Column="0"
+                           Style="{StaticResource SubtitleTextBlockStyle}"
+                           Margin="0,5,0,0"
+                           HorizontalAlignment="Left"
+                           >Theme</TextBlock>
+
+                <StackPanel Grid.Row="6" Grid.Column="1" >
+                    <TextBlock Margin="0,10">The default theme is whatever you've set in the Settings app. Use Ctrl+Shift+T to toggle themes</TextBlock>
+                    <local:UniformStackPanel Orientation="Horizontal" Margin="0,5">
+                        <RadioButton IsChecked="{x:Bind local:App.Instance.IsSystemTheme, Mode=TwoWay}"
+                                 Content="Default"
+                                     GroupName="ThemeRadioButtons"/>
+                        <RadioButton IsChecked="{x:Bind local:App.Instance.IsLightTheme, Mode=TwoWay}"
+                                 Content="Light"
+                                     GroupName="ThemeRadioButtons"/>
+                        <RadioButton IsChecked="{x:Bind local:App.Instance.IsDarkTheme, Mode=TwoWay}"
+                                 Content="Dark"
+                                     GroupName="ThemeRadioButtons"/>
+                    </local:UniformStackPanel>
+                </StackPanel>
+
+
             </Grid>
         </Grid>
     </ScrollViewer>
