--- a/Tempo2/LoadingDialog.xaml
+++ b/Tempo2/LoadingDialog.xaml
@@ -5,7 +5,8 @@
     xmlns:local="using:Tempo"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    mc:Ignorable="d">
+    mc:Ignorable="d"
+    RequestedTheme="{x:Bind local:App.Instance.ElementTheme, Mode=OneWay}">
 
     <StackPanel>
         <TextBlock Text="{x:Bind Message}"/>
