--- a/Tempo2/App.xaml
+++ b/Tempo2/App.xaml
@@ -2,8 +2,8 @@
     x:Class="Tempo.App"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:Tempo" xmlns:controls="using:Microsoft.UI.Xaml.Controls"
-    RequestedTheme="Light">
+    xmlns:local="using:Tempo" 
+    xmlns:controls="using:Microsoft.UI.Xaml.Controls"  >
 
     
     <!-- 
