--- a/Tempo2/AllModelPropertiesPage.xaml
+++ b/Tempo2/AllModelPropertiesPage.xaml
@@ -3,11 +3,11 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:Tempo"
-    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    mc:Ignorable="d">
+    RequestedTheme="{x:Bind local:App.Instance.ElementTheme, Mode=OneWay}"
+    >
 
-    <Grid RowDefinitions="Auto,Auto,Auto,*"  Padding="30" HorizontalAlignment="Stretch" MaxWidth="800">
+    <Grid RowDefinitions="Auto,Auto,Auto,*"  Padding="30" HorizontalAlignment="Stretch" MaxWidth="800"
+          Background="{ThemeResource SystemControlPageBackgroundChromeMediumLowBrush}">
 
         <TextBlock TextWrapping="Wrap">Below are all model properties for <Run FontWeight="Bold" Text="{x:Bind VM.MemberPrettyName, Mode=OneWay}"/></TextBlock>
 
