--- a/Tempo2/ToolTipTypeView.xaml
+++ b/Tempo2/ToolTipTypeView.xaml
@@ -5,14 +5,10 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:l="using:Tempo"
-    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    mc:Ignorable="d"
-    d:DesignHeight="300"
-    d:DesignWidth="400">
+    RequestedTheme="{x:Bind l:App.Instance.ElementTheme, Mode=OneWay}">
 
     <!-- Use x:Load to defer loading until the tooltip actually opens -->
-    <StackPanel x:Name="_root" x:Load="{x:Bind HasOpened, Mode=OneWay}">
+    <StackPanel x:Name="_root" x:Load="{x:Bind HasOpened, Mode=OneWay}" >
         <TextBlock Text="{x:Bind TypeViewModel.PrettyName}" FontWeight="ExtraBlack"/>
         <TextBlock Text="{x:Bind TypeViewModel.Namespace}" Margin="0,0,0,10"  />
 
