--- a/Tempo2/TypeDetailViewTypeInfo.xaml
+++ b/Tempo2/TypeDetailViewTypeInfo.xaml
@@ -103,7 +103,15 @@
                 </StackPanel>
 
                 <StackPanel local:CollapseIfEmpty.IsEnabledFor="{x:Bind _returnedByItemsControl, Mode=OneWay}" >
-                    <local:StackListHeaderItem >Returned by</local:StackListHeaderItem>
+
+                    <StackPanel Orientation="Horizontal">
+                        <local:StackListHeaderItem >Returned by</local:StackListHeaderItem>
+                        <HyperlinkButton Click="HyperlinkButton_Click" Margin="5,0,0,-5"
+                                         ToolTipService.ToolTip="Show all the ways to get an instance of this type">
+                            <SymbolIcon Symbol="Map" />
+                        </HyperlinkButton>
+                    </StackPanel>
+
                     <ItemsControl ItemsSource="{x:Bind TypeVM.ReturnedByAsync, Mode=OneWay}" x:Name="_returnedByItemsControl">
                         <ItemsControl.ItemTemplate>
                             <DataTemplate x:DataType="local:MemberOrTypeViewModelBase">
@@ -159,7 +167,8 @@
 
                         <TextBlock Margin="0,10,0,0"><Run Text="{x:Bind TypeVM.TotalMembers, Mode=OneWay}" IsTextScaleFactorEnabled="True" /> total members</TextBlock>
 
-                        <TextBlock Margin="0,15,0,0"><Hyperlink Click="ShowAllModelProperties_Click"
+                        <TextBlock Margin="0,15,0,0"
+                                   HorizontalAlignment="Left"><Hyperlink Click="ShowAllModelProperties_Click"
                                      >All model properties</Hyperlink></TextBlock>
                     </StackPanel>
                 </StackPanel>
